<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Home Automation</string>
    <string name="action_settings">Settings</string>
    <string name="usr_login">LOGIN TO CONTINUE</string>
    <string name="usrnam">User Name : </string>
    <string name="pwd">Password   : </string>
    <string name="blank_line"></string>
    <string name="forget">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="done">Done</string>
    <string name="none">None</string>
    <string name="enter">Enter</string>
    <string name="submit">Submit</string>
    <string name="power_rating">POWER RATING : </string>
    <string name="voltage_rating">VOLTAGE RATING : </string>
    <string name="title_activity_connecting_page">Home Automation</string>
    <string name="loading">Loading.....Please Wait</string>
    <string name="title_activity_forgetpwd">Forgot Password?</string>
    <string name="fpwd_page1">We understand that you forgot your password.</string>
    <string name="fpwd_page2">We will provide you with a new password after you correctly answer the following security question.</string>
    <string name="fpwd_page3">What is your Maiden name?</string>
    <string name="fpwd_page4">If you do not know the answer to your security question, you can unlock using the Master password provided with your Arduino Hardware</string>
    <string name="fpwd_page5">Enter the Master key here :- </string>
    <string name="title_activity_accountsettings">Account Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_homepage__devicelist">Homepage_Devicelist</string>
    <string name="hp_page1">LIST OF DEVICES :</string>
    <string name="hp_page1_sok1">SOCKET 1 :</string>
    <string name="hp_page1_sok2">SOCKET 2 :</string>
    <string name="hp_page1_sok3">SOCKET 3 :</string>
    <string name="hp_page1_sok4">SOCKET 4 :</string>
    <string name="hp_page1_sok5">SOCKET 5 :</string>
    <string name="hp_page1_sok6">Socket 6 :</string>
    <string name="hp_page1_sok7">Socket 7 :</string>
    <string name="hp_page1_sok8">Socket 8 :</string>
    <string name="hp_page2">List of Sockets :</string>
    <string name="device_name">DEVICE NAME :</string>
    <string name="device_type">DEVICE TYPE :</string>
    <string name="device_location">DEVICE LOCATION :</string>
    <string name="device_rating">DEVICE RATINGS :</string>
    <string name="title_activity_socket1">Socket1</string>
    <string name="title_activity_resetpwd">Reset Password</string>
    <string name="resetpwd_page1">Your User name and Password has been successfully reset.</string>
    <string name="resetpwd_page2">New User Name : </string>
    <string name="resetpwd_page3">New Password  : </string>
    <string name="resetpwd_page4">Click OK to continue.</string>
    <string name="resetpwd_page5">Major Project</string>
    <string name="resetpwd_page6">nnvvs</string>
    <string name="ok">OK</string>
    <string name="edit">EDIT</string>
    <string name="title_activity_edit_socket1">Edit_socket1</string>
    <string name="tube">TubeLight</string>
    <string name="cfl">CFL Bulb</string>
    <string name="fan">Fan</string>
    <string name="ac">Air Conditioner</string>
    <string name="bulb">Incandescent Bulb</string>
    <string name="heater">Heater</string>
    <string name="other_analog">Other Analog Devices</string>
    <string name="other_digital">Other Digital Devices</string>
    <string name="edit_device_name">DEVICE NAME* : Check your device....</string>
    <string name="edit_device_location">DEVICE LOCATION : Enter the location or other identifying feautures of your Device</string>
    <string name="edit_device_rating">DEVICE RATINGS : Enter the ratings of your device.This data is used to calculate the Energy consumption of this device.</string>
    <string name="edit_calculate_energy2">Calculate Energy consumptions</string>
    <string name="edit_calculate_energy1">ENERGY CONSUMPTION STATISTICS : The following check Box needs to be checked if you want us to calculate the energy consumption of your device.</string>
    <string name="edit_device_type1">DEVICE TYPE : </string>
    <string name="edit_rating_voltage">Voltage Rating in Volts,V : </string>
    <string name="edit_rating_power">Power Rating in Watts,W : </string>
    <string name="title_activity_socket2">Socket2</string>
    <string name="title_activity_socket3">Socket3</string>
    <string name="title_activity_socket4">Socket4</string>
    <string name="title_activity_socket5">Socket5</string>
    <string name="title_activity_socket6">Socket6</string>
    <string name="title_activity_socket7">Socket7</string>
    <string name="title_activity_socket8">Socket8</string>
    <string name="title_activity_edit_socket2">Edit_socket2</string>
    <string name="title_activity_edit_socket3">Edit_socket3</string>
    <string name="title_activity_edit_socket4">Edit_socket4</string>
    <string name="title_activity_edit_socket5">Edit_socket5</string>
    <string name="title_activity_socketa2">Socketa2</string>
    <string name="title_activity_socketa3">Socketa3</string>
    <string name="title_activity_socket4a">Socket4a</string>
    <string name="title_activity_socketa5">Socketa5</string>
    <string name="title_activity_socketa4">Socketa4</string>

</resources>
