<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
    
<ScrollView
        android:id="@+id/scrollView4"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingRight="10dp" >

    <LinearLayout
        android:layout_width="match_parent"
    	android:layout_height="wrap_content"
    	android:orientation="horizontal">
        
        <Button
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_gravity="left"
        	android:text="Home"
        	android:onClick="home4"  />
        
    	<Button
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:layout_gravity="right"
        	android:text="Edit Socket4"
        	android:onClick="editSocket4"  />
    
    </LinearLayout>	
    
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blank_line" />
    
    <TextView
        android:layout_width="wrap_content"
       	android:layout_height="wrap_content"
       	android:text="CONNECTION STATUS : " />

    <TextView
        android:paddingLeft="25dp"
       	android:id ="@+id/id_condis4"
       	android:layout_width="wrap_content"
       	android:layout_height="wrap_content" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blank_line" />

    <TextView
       	android:layout_width="wrap_content"
       	android:layout_height="wrap_content"
       	android:text="DEVICE STATUS : " />

   	<TextView
       	android:paddingLeft="25dp"
       	android:id ="@+id/id_statusdis4"
       	android:layout_width="wrap_content"
      	android:layout_height="wrap_content" />
    
   	<TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blank_line" />
    
   <LinearLayout
        android:layout_width="match_parent"
        android:id="@+id/id_layout4"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
           	
   		<TextView
       		android:id = "@+id/id_sock4_speed"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text=" " />
   
    </LinearLayout>
   		
   	<TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blank_line" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/device_name" />
    
    <TextView
        android:id ="@+id/id_namedis4"
        android:paddingLeft="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blank_line" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/device_type" />
    
    <TextView
        android:id ="@+id/id_typedis4"
        android:paddingLeft="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blank_line" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/device_location" />
    
    <TextView
        android:id ="@+id/id_locationdis4"
        android:layout_width="wrap_content"
        android:paddingLeft="25dp"
        android:layout_height="wrap_content"/>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blank_line" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="CALCULATE ENERGY READING : " />
    
    <TextView
        android:id ="@+id/id_do_cal_energy4"
        android:paddingLeft="25dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blank_line" />
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/device_rating" />
    
    <LinearLayout
        android:paddingLeft="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
       
        <TextView
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/power_rating" />
        
        <TextView
        	android:id= "@+id/id_powerratingdis4"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/none" />
           
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="match_parent"
        android:paddingLeft="25dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal" >
       
        <TextView
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/voltage_rating" />
        
        <TextView
        	android:id= "@+id/id_voltageratingdis4"
        	android:layout_width="wrap_content"
        	android:layout_height="wrap_content"
        	android:text="@string/none" />
           
    </LinearLayout>
   
    

   
       <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blank_line" />
    
        <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/blank_line" />
    
    
</LinearLayout>

</ScrollView>
        
</LinearLayout>
